--- a/css/styles.css
+++ b/css/styles.css
@@ -8,3 +8,9 @@ the browser default styles before applying their own */
 	margin-right: 1em;
 	margin-bottom: 1em;
 }
+
+@media screen and (max-width: 767px) {
+    .carousel {
+    	display: none; 
+    }
+}
